fix: images on mobile

--- a/src/app/components/root/page-schedule/page-schedule.component.scss
+++ b/src/app/components/root/page-schedule/page-schedule.component.scss
@@ -31,8 +31,22 @@
   .schedule p {
       width: 60%;
   }
-  .schedule ifram {
-      width: 60%;
+  .schedule-container {
+    /* This ensures the container doesn't exceed the width of the viewport */
+    max-width: 100%;
+    /* This will help if you have a flex container parent */
+    width: 100%;
+  }
+
+  .schedule-image {
+    /* This makes the image scale down if the container is smaller */
+    max-width: 100%;
+    /* This maintains the aspect ratio of the image */
+    height: auto;
+    /* This displays the image as a block element, which allows margin auto to work for centering if needed */
+    display: block;
+    /* Adds some space between the images */
+    margin-bottom: 1rem; /* Adjust as needed */
   }
 }
   
